compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__guards__clause_guards.snap
---
source: compiler-core/src/erlang/tests/guards.rs
expression: "\npub fn main(args) {\n  case args {\n    x if x == args -> 1\n    _ -> 0\n  }\n}\n"
---
----- SOURCE CODE

pub fn main(args) {
  case args {
    x if x == args -> 1
    _ -> 0
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/1]).

-file("project/test/my/mod.gleam", 2).
-spec main(any()) -> integer().
main(Args) ->
    case Args of
    X when X =:= Args ->
        1;

    _ ->
        0
end.
