compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__guards__clause_guards27.snap
---
source: compiler-core/src/erlang/tests/guards.rs
expression: "\npub fn main() {\n  case \"test\" {\n    x if x == \"test\" -> 1\n    _ -> 0\n  }\n}\n"
---
----- SOURCE CODE

pub fn main() {
  case "test" {
    x if x == "test" -> 1
    _ -> 0
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    case <<"test"/utf8>> of
    X when X =:= <<"test"/utf8>> ->
        1;

    _ ->
        0
end.
