compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__guards__clause_guards28.snap
---
source: compiler-core/src/erlang/tests/guards.rs
expression: "\n    type Test { Test(x: Int, y: Float) }\n    pub fn main() {\n      let x = Test(1, 3.0)\n      case x {\n        _ if x == Test(1, 1.0) -> 1\n        _ if x == Test(y: 2.0, x: 2) -> 2\n        _ if x != Test(2, 3.0) -> 2\n        _ -> 0\n      }\n    }\n"
---
----- SOURCE CODE

    type Test { Test(x: Int, y: Float) }
    pub fn main() {
      let x = Test(1, 3.0)
      case x {
        _ if x == Test(1, 1.0) -> 1
        _ if x == Test(y: 2.0, x: 2) -> 2
        _ if x != Test(2, 3.0) -> 2
        _ -> 0
      }
    }


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).
-export_type([test/0]).

-type test() :: {test, integer(), float()}.

-file("project/test/my/mod.gleam", 3).
-spec main() -> integer().
main() ->
    X = {test, 1, 3.0},
case X of
    _ when X =:= {test, 1, 1.0} ->
        1;

    _ when X =:= {test, 2, 2.0} ->
        2;

    _ when X =/= {test, 2, 3.0} ->
        2;

    _ ->
        0
end.
